Prevent pokemon list enlarging from sticking on mobile devices

--- a/src/styles.css
+++ b/src/styles.css
@@ -47,10 +47,12 @@ body {
     transition: transform 0.5s cubic-bezier(0, 1, 0.5, 1.5), boxShadow 0.5s cubic-bezier(0, 1, 0.5, 1.5);
 }
 
-.pokedex .list .item:hover {
-    transform: scale(1.5);
-    z-index: 100;
-    box-shadow: inset 0 -2px 2px rgba(0, 0, 0, 0.2), inset 0 2px 2px rgba(255, 255, 255, 0.2), 1px 3px 3px 3px rgba(0, 0, 0, .3);
+@media (hover: hover) {
+    .pokedex .list .item:hover {
+        transform: scale(1.5);
+        z-index: 100;
+        box-shadow: inset 0 -2px 2px rgba(0, 0, 0, 0.2), inset 0 2px 2px rgba(255, 255, 255, 0.2), 1px 3px 3px 3px rgba(0, 0, 0, .3);
+    }
 }
 
 .pokedex .list .hidden {
